--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src/app.js --out-file=public/scripts/app.js --presets=@babel/preset-env,@babel/preset-react --watch",
-    "serve": "live-server public"
+    "serve": "live-server public",
+    "build": "webpack --watch",
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=@babel/preset-env,@babel/preset-react --watch"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,9 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "webpack": "^5.51.0",
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {}
 }
