--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "webpack": "^5.51.0",
     "webpack-cli": "^4.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "validator": "^13.6.0"
+  }
 }
