--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "live-server public",
-    "build": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=@babel/preset-env,@babel/preset-react --watch"
+    "build": "webpack",
+    "dev-server": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "webpack-dev-server": "^4.0.0"
   }
 }
