--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
     "validator": "^13.6.0",
     "webpack-dev-server": "^4.0.0"
   }
